# pii-schema-classifier

./: README.md  full_schema_classification.csv  metadata.py  pyproject.toml  requirements.txt  user_config.yaml
.github/workflows/: publish.yml
config/: user_config.yaml
src/pii_meta/: classify.py  llm_agent.py
